--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   build:
     working_directory: /root/project/SmlmTools.jl   # Clone into a directory whose name matches your Package.
     docker:
-      - image: julia:1.7
+      - image: julia:1.8
     steps:
       - run: pwd
       - run: ls -alsht
@@ -14,6 +14,6 @@ jobs:
       - run: apt install python3-pip -y
       - run: pip3 install smlmvis
       - run:
-          command: julia -e 'using Pkg; Pkg.add("Coverage");  Pkg.add(url="git@github.com:bencardoen/Colocalization.jl.git"); Pkg.add(url="git@github.com:bencardoen/SmlmTools.jl.git"); Pkg.test("SmlmTools", coverage=true)'
+          command: julia -e 'using Pkg; Pkg.add("Coverage");  Pkg.add(url="https://github.com/bencardoen/Colocalization.jl.git"); Pkg.add(url="https://github.com/bencardoen/SmlmTools.jl.git"); Pkg.test("SmlmTools", coverage=true)'
       - run:
           command: julia -e 'using Pkg; cd(Pkg.dir("SmlmTools")); using Coverage; Codecov.submit(Codecov.process_folder())'
