--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: apt install python3-pip -y
       - run: pip3 install smlmvis
       - run:
-          command: julia -e 'using Pkg; Pkg.add("Coverage");  Pkg.test("SmlmTools", coverage=true)'
+          command: julia -e 'using Pkg; Pkg.add("Coverage"); Pkg.add(url="https://github.com/bencardoen/SmlmTools.jl.git"); Pkg.test("SmlmTools", coverage=true)'
           environment:
             R_HOME : "*"
             PYTHON : "/usr/bin/python3"
