--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SmlmTools"
 uuid = "bd0e0daa-fc13-11e8-3c42-ad9bbc1c8ca1"
 authors = ["Ben Cardoen <26388277+bencardoen@users.noreply.github.com> and contributors"]
-version = "0.1.1"
+version = "0.1.2"
 
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
@@ -30,6 +30,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [extras]
